--- a/autompg.ipynb
+++ b/autompg.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a simple regression task. We are using a KERAS model and some basic plotting."
+    "This is a simple regression task. We are using a KERAS model and some basic plotting.\n",
+    "\n",
+    "ref: https://archive.ics.uci.edu/ml/machine-learning-databases/auto-mpg/auto-mpg.names"
    ]
   },
   {
