--- a/autompg.ipynb
+++ b/autompg.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "This is a simple regression task. We are using a KERAS model and some basic plotting.\n",
     "\n",
-    "ref: https://archive.ics.uci.edu/ml/machine-learning-databases/auto-mpg/auto-mpg.names"
+    "ref: https://archive.ics.uci.edu/ml/datasets/Auto+MPG"
    ]
   },
   {
